@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-10-22T08:07:51Z",
-  "count_outdated" : 90,
-  "uniques_outdated" : 77,
-  "count" : 91,
-  "uniques" : 78,
+  "timestamp" : "2022-11-12T08:00:38Z",
+  "count_outdated" : 91,
+  "uniques_outdated" : 78,
+  "count" : 93,
+  "uniques" : 79,
   "clones" : [
     {
-      "timestamp": "2022-10-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-11-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
