@@ -1,10 +1,10 @@
 {
-  "count": 1,
+  "count": 2,
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2022-10-22T00:00:00Z",
-      "count": 1,
+      "timestamp": "2022-11-12T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
