@@ -1,3 +1,11 @@
+2022-11-12T08:00:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3450135573 # 606
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 77 90 / 78 91
+* notice: next accum: outdated-unq outdated-all / unq all: 78 91 / 79 93
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-10-22] / [2022-11-12]
+
 2022-10-22T08:07:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3302540357 # 543
 * notice: last 14d: unq all: 1 1
